src/tests/test-src/errors/E52-non-bool-condition.syntran
// E52: non-bool-condition
// The condition of an if/while/etc. statement is not a bool

let n = 5;
if n
{
}
